<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="202dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drum" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/credit_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Credits: 100"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Item Name"
        android:textSize="32sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:text="Price: 0 credits"
        android:textColor="@color/black"/>

    <RatingBar
        android:id="@+id/item_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="0"
        android:isIndicator="true" />

    <TextView
        android:id="@+id/item_condition"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:text="Item Condition"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Next" />

    <Button
        android:id="@+id/borrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:text="Borrow" />
</LinearLayout>
