...
            android:scaleType="centerCrop"
            android:src="@drawable/drum" />
    </androidx.cardview.widget.CardView>

    <!-- Item Name -->
    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Item Name"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
...
